@@ -31,6 +31,7 @@ export(cloud)
 export(convertCorpus)
 export(estimateEffect)
 export(eval.heldout)
+export(exclusivity)
 export(findThoughts)
 export(findTopic)
 export(fitNewDocuments)
@@ -53,6 +54,7 @@ export(s)
 export(sageLabels)
 export(searchK)
 export(selectModel)
+export(semanticCoherence)
 export(stm)
 export(textProcessor)
 export(thetaPosterior)
